--- a/revenueassurance/telco-revass.ipynb
+++ b/revenueassurance/telco-revass.ipynb
@@ -213,7 +213,7 @@
     "model2_path = \"models/model2.pkl\"\n",
     "with open(model2_path, 'wb') as model_file:\n",
     "    pickle.dump((model_2, X_train.columns.tolist()), model_file)\n",
-    "print(f\"Model-2: RandomForestClassifier saved to {model2_path}\")"
+    "print(f\"Model-2: BalancedRandomForestClassifier saved to {model2_path}\")"
    ]
   }
  ],
