--- a/revenueassurance/02-telco-revass-transformer.ipynb
+++ b/revenueassurance/02-telco-revass-transformer.ipynb
@@ -5,7 +5,7 @@
    "id": "e3ba31c4",
    "metadata": {},
    "source": [
-    "## Data Loading and Preprocessing\n",
+    "## Telecom Revenue Assurance AI Model (Transformer-NN From Dust) \n",
     "Author: Fatih E. NAR"
    ]
   },
