--- a/revenueassurance/03-revass_bert.ipynb
+++ b/revenueassurance/03-revass_bert.ipynb
@@ -1,13 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Telecom Revenue Assurance AI Model (Custom-Tuned Bert)\n",
-    "# Author: Fatih E. NAR"
+    "# Telecom Revenue Assurance AI Model (Fine-Tuned BERT)\n",
+    "Author: Fatih E. NAR\n",
+    "\n"
    ]
   },
   {
