--- a/revenueassurance/03.1-revass_bert_lora.ipynb
+++ b/revenueassurance/03.1-revass_bert_lora.ipynb
@@ -18,8 +18,7 @@
    "source": [
     "# Install Necessary Libraries\n",
     "!pip install -r requirements.txt\n",
-    "!pip install transformers datasets torch scikit-learn accelerate -U\n",
-    "!pip install transformers datasets accelerate peft bitsandbytes"
+    "!pip install transformers datasets accelerate peft bitsandbytes torch scikit-learn accelerate -U\n"
    ]
   },
   {
