--- a/revenueassurance/03.2-revass_bert_lora_enhanced.ipynb
+++ b/revenueassurance/03.2-revass_bert_lora_enhanced.ipynb
@@ -131,7 +131,7 @@
     "    push_to_hub=False,\n",
     "    logging_dir='./logs',\n",
     "    logging_steps=10,\n",
-    "    fp16=True  # Enable mixed precision training if CUDA is available  # Enable mixed precision training if using CUDA\n",
+    "    fp16=use_fp16  # Enable mixed precision training if CUDA is available  # Enable mixed precision training if using CUDA\n",
     ")\n",
     "\n",
     "# Define custom compute_metrics function\n",
