--- a/revenueassurance/03-revass_bert_lora.ipynb
+++ b/revenueassurance/03-revass_bert_lora.ipynb
@@ -125,9 +125,9 @@
     "    evaluation_strategy='epoch',\n",
     "    num_train_epochs=3,\n",
     "    learning_rate=2e-5,\n",
-    "    per_device_train_batch_size=8  # Adjusted for low capacity GPU,\n",
+    "    per_device_train_batch_size=8,  # Adjusted for low capacity GPU,\n",
     "    per_device_eval_batch_size=16,\n",
-    "    gradient_accumulation_steps=8  # Increased to handle larger effective batch sizes,  # Accumulate gradients\n",
+    "    gradient_accumulation_steps=8,  # Increased to handle larger effective batch sizes,  # Accumulate gradients\n",
     "    push_to_hub=False,\n",
     "    logging_dir='./logs',\n",
     "    logging_steps=10,\n",
