--- a/revenueassurance/03-revass_bert_lora.ipynb
+++ b/revenueassurance/03-revass_bert_lora.ipynb
@@ -74,7 +74,7 @@
     "    f\"SMS Count: {row['Sms_Count']}, Roaming Indicator: {row['Roaming_Indicator']}, \"\n",
     "    f\"Mobile Wallet Use: {row['MobileWallet_Use']}, Plan Type: {row['Plan_Type']}, \"\n",
     "    f\"Cost: {row['Cost']}, Cellular Location Distance: {row['Cellular_Location_Distance']}, \"\n",
-    "    f\"Last Time Pin Used: {row['Last_Time_Pin_Used']}, Avg Call Duration: {row['Avg_Call_Duration']}, \"\n",
+    "    f\"Personal Pin Used: {row['Personal_Pin_Used']}, Avg Call Duration: {row['Avg_Call_Duration']}, \"\n",
     "    f\"Avg Data Usage: {row['Avg_Data_Usage']}, Avg Cost: {row['Avg_Cost']}\"\n",
     "), axis=1)\n",
     "\n",
