--- a/revenueassurance/01-telco-revass-randomforest.ipynb
+++ b/revenueassurance/01-telco-revass-randomforest.ipynb
@@ -28,7 +28,7 @@
    "outputs": [],
    "source": [
     "## Install dependencies\n",
-    "!pip install -r requirements.txt"
+    "%pip install -r requirements.txt"
    ]
   },
   {
