--- a/serviceassurance/service_assurance_insights_notebook.ipynb
+++ b/serviceassurance/service_assurance_insights_notebook.ipynb
@@ -1,5 +1,17 @@
 {
  "cells": [
+ {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Telecom Service Assurance AI Model (Transformer NN)\n",
+    "Author: Fatih E. NAR\n",
+    "\n",
+    "## Introduction\n",
+    "In this notebook, we showcase a machine learning model to create latency predictions for telecom networks."
+   ]
+  },
   {
    "cell_type": "code",
    "execution_count": null,
