--- a/serviceassurance/service_assurance_latencyinsights_notebook.ipynb
+++ b/serviceassurance/service_assurance_latencyinsights_notebook.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Telecom Service Assurance AI Model (Transformer NN)\n",
+    "# Telecom Service Assurance AI Model (Transformer NN) for Latency Insights\n",
     "Author: Fatih E. NAR\n",
     "\n",
     "## Introduction\n",
