--- a/serviceassurance/servass_latencyinsights.ipynb
+++ b/serviceassurance/servass_latencyinsights.ipynb
@@ -57,7 +57,7 @@
     "print(x.device)\n",
     "\n",
     "# Load the generated data\n",
-    "data = pd.read_csv('data/telecom_sevass_data.csv.xz', compression='xz', parse_dates=['timestamp'])\n",
+    "data = pd.read_csv('data/servass_data.csv.xz', compression='xz', parse_dates=['timestamp'])\n",
     "\n",
     "# Inspect the data for problematic values\n",
     "print(\"Initial data inspection:\")\n",
