--- a/serviceassurance/servass_npsinsights.ipynb
+++ b/serviceassurance/servass_npsinsights.ipynb
@@ -8,7 +8,7 @@
     "Author: Fatih E. NAR\n",
     "\n",
     "## Introduction\n",
-    "In this notebook, we showcase a machine learning model to create NPS predictions for telecom networks."
+    "In this notebook, we showcase a machine learning model to create NPS predictions for telecom networks. Net Promoter Score (NPS) is a customer loyalty metric that measures customers' willingness to recommend a company's products or services to others. It is widely used for assessing customer satisfaction and predicting business growth."
    ]
   },
   {
