--- a/serviceassurance/servass_npsinsights.ipynb
+++ b/serviceassurance/servass_npsinsights.ipynb
@@ -8,7 +8,8 @@
     "Author: Fatih E. NAR\n",
     "\n",
     "## Introduction\n",
-    "In this notebook, we showcase a machine learning model to create NPS predictions for telecom networks. Net Promoter Score (NPS) is a customer loyalty metric that measures customers' willingness to recommend a company's products or services to others. It is widely used for assessing customer satisfaction and predicting business growth."
+    "In this notebook, we showcase a machine learning model to create NPS predictions for telecom networks. Net Promoter Score (NPS) is a customer loyalty metric that measures customers' willingness to recommend a company's products or services to others. It is widely used for assessing customer satisfaction and predicting business growth.\n",
+    "Our prediction for the Net Promoter Score (NPS) aims to estimate how likely customers are to recommend our product or service based on various features or factors. By building a predictive model, we can forecast NPS scores for new or unseen data, which can help us understand and improve customer satisfaction."
    ]
   },
   {
