--- a/5gnetops/5gran-predictions.ipynb
+++ b/5gnetops/5gran-predictions.ipynb
@@ -32,7 +32,7 @@
     "from transformers import GPTJForCausalLM, AutoTokenizer, Trainer, TrainingArguments\n",
     "\n",
     "os.environ[\"PYTORCH_MPS_HIGH_WATERMARK_RATIO\"] = \"0.9\"\n",
-    "os.environ[\"CUDA_LAUNCH_BLOCKING\"] = \"1\"\n",
+    "#os.environ[\"CUDA_LAUNCH_BLOCKING\"] = \"1\"\n",
     "# Extract the .xz file\n",
     "with lzma.open('data/5G_netops_data.csv.xz', 'rb') as f_in:\n",
     "    with open('data/5G_netops_data.csv', 'wb') as f_out:\n",
