--- a/5gnetops/5gran-predictions.ipynb
+++ b/5gnetops/5gran-predictions.ipynb
@@ -198,11 +198,15 @@
     "training_args = TrainingArguments(\n",
     "    output_dir=\"./results\",\n",
     "    overwrite_output_dir=True,\n",
-    "    num_train_epochs=10, # 10 epochs\n",
-    "    per_device_train_batch_size=1,  # Reduce batch size\n",
-    "    gradient_accumulation_steps=16,  # Accumulate gradients over 16 steps\n",
-    "    save_steps=10_000, # 10_000 steps \n",
-    "    save_total_limit=5,\n",
+    "    num_train_epochs=3, # 10 epochs\n",
+    "    per_device_train_batch_size=4,  # Reduce batch size\n",
+    "    gradient_accumulation_steps=4,  # Accumulate gradients over 16 steps\n",
+    "    learning_rate=5e-5,  # Learning rate \n",
+    "    save_steps=2000, # 10_000 steps \n",
+    "    save_total_limit=2,\n",
+    "    load_best_model_at_end=True,  # Load the best model at the end of training \n",
+    "    metric_for_best_model="loss",  # Use loss to evaluate the best model \n",
+    "    fp16=False,  # Disable mixed precision training for MPS \n"
     ")\n",
     "\n",
     "trainer = Trainer(\n",
