--- a/5gnetops/5gran-predictions.ipynb
+++ b/5gnetops/5gran-predictions.ipynb
@@ -206,7 +206,7 @@
     "    save_total_limit=2,\n",
     "    load_best_model_at_end=True,  # Load the best model at the end of training\n",
     "    metric_for_best_model="loss",  # Use loss to evaluate the best model\n",
-    "    fp16=False,  # Disable mixed precision training for MPS\n"
+    "    fp16=False  # Disable mixed precision training for MPS\n"
     ")\n",
     "\n",
     "trainer = Trainer(\n",
