--- a/5gnetops/5gran-predictions.ipynb
+++ b/5gnetops/5gran-predictions.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "%pip install -r requirements.txt\n",
-    "%pip3 install --pre torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/nightly/cpu"
+    "%pip install --pre torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/nightly/cpu"
    ]
   },
   {
