--- a/5gnetops/5gran-predictions.ipynb
+++ b/5gnetops/5gran-predictions.ipynb
@@ -34,6 +34,7 @@
     "import threading\n",
     "import sys\n",
     "import time\n",
+    "import gc\n",
     "from datasets import Dataset\n",
     "from transformers import GPTJForCausalLM, AutoTokenizer, Trainer, TrainingArguments\n",
     "from peft import get_peft_model, LoraConfig, TaskType\n",
@@ -45,7 +46,10 @@
     "if torch.cuda.is_available():\n",
     "    device = torch.device(\"cuda\")\n",
     "    print(\"Using CUDA (NVIDIA GPU)\")\n",
-    "    os.environ[\"CUDA_LAUNCH_BLOCKING\"] = \"1\"\n",
+    "    #os.environ[\"CUDA_LAUNCH_BLOCKING\"] = \"1\"\n",
+    "    torch.cuda.empty_cache()\n",
+    "    gc.collect()\n",
+    "    os.environ["PYTORCH_CUDA_ALLOC_CONF"] = "backend:cudaMallocAsync,max_split_size_mb:128,expandable_segments:True,garbage_collection_threshold:0.8"\n",
     "# Check if MPS (Apple Silicon GPU) is available\n",
     "elif torch.backends.mps.is_available():\n",
     "    device = torch.device(\"mps\")\n",
