--- a/5gnetops/5gran-predictions.ipynb
+++ b/5gnetops/5gran-predictions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5G Network Operations Insights with Fine Tuning of EleutherAI/gpt-j-6B\n",
+    "# 5G Network Operations Insights with Fine Tuning of Distilgpt2 (82M)\n",
     "## Project Overview\n",
     "This project aims to deliver a 5g network insight with fine tuning a network performant LLM"
    ]
