--- a/5gnetops/5gran-predictions.ipynb
+++ b/5gnetops/5gran-predictions.ipynb
@@ -212,9 +212,9 @@
     "training_args = TrainingArguments(\n",
     "    output_dir=\"./results\",  # Output directory\n",
     "    overwrite_output_dir=True,  # Overwrite the content of the output directory\n",
-    "    num_train_epochs=3,  # Number of training epochs\n",
-    "    per_device_train_batch_size=32,  # Batch size per device during training\n",
-    "    gradient_accumulation_steps=16,  # Accumulate gradients over multiple steps\n",
+    "    num_train_epochs=5,  # Number of training epochs\n",
+    "    per_device_train_batch_size=16,  # Batch size per device during training\n",
+    "    gradient_accumulation_steps=8,  # Accumulate gradients over multiple steps\n",
     "    learning_rate=5e-5,  # Learning rate\n",
     "    save_steps=2000,  # Save checkpoint every 2000 steps\n",
     "    save_total_limit=2,  # Limit the total amount of checkpoints\n",
@@ -223,7 +223,7 @@
     "    eval_steps=2000,  # Evaluate every 2000 steps\n",
     "    load_best_model_at_end=True,  # Load the best model at the end of training\n",
     "    metric_for_best_model=\"loss\",  # Use loss to evaluate the best model\n",
-    "    fp16=False,  # Disable mixed precision training for MPS\n",
+    "    fp16=True,  # Disable mixed precision training for MPS\n",
     ")\n",
     "\n",
     "trainer = Trainer(\n",
