--- a/5gnetops/5gran-predictions.ipynb
+++ b/5gnetops/5gran-predictions.ipynb
@@ -6,8 +6,8 @@
    "source": [
     "# 5G Network Operations Insights with Fine Tuning of GPT2 (This is the smallest version of GPT-2, with 124M parameters.)\n",
     "## Project Overview\n",
-    "Author: Fatih E. NAR\n",
-    "This project aims to deliver a 5g network insight with fine tuning a network performant LLM\n",
+    "Author: Fatih E. NAR<br>\n",
+    "This project aims to deliver a 5g network insight with fine tuning a network performant LLM<br>\n",
     "Model card: https://huggingface.co/openai-community/gpt2"
    ]
   },
