--- a/5gnetops/5gran-predictions.ipynb
+++ b/5gnetops/5gran-predictions.ipynb
@@ -17,8 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install -r requirements.txt\n",
-    "%pip install --pre torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/nightly/cpu"
+    "%pip install -r requirements.txt"
    ]
   },
   {
@@ -32,20 +31,17 @@
     "import pandas as pd\n",
     "import os\n",
     "import torch\n",
-    "import psutil\n",
     "import threading\n",
     "import sys\n",
     "import time\n",
     "import gc\n",
     "from datasets import Dataset\n",
-    "from transformers import GPT2LMHeadModel, GPT2Tokenizer, Trainer, TrainingArguments, get_linear_schedule_with_warmup\n",
-    "\n",
+    "from transformers import T5ForConditionalGeneration, T5Tokenizer, Trainer, TrainingArguments, get_linear_schedule_with_warmup, Seq2SeqTrainer, Seq2SeqTrainingArguments\n",
     "from peft import get_peft_model, LoraConfig, TaskType\n",
     "\n",
     "# Save the model and tokenizer\n",
     "model_save_path = \"models/5g_oss_model\"\n",
-    "#model_name = \"distilgpt2\"\n",
-    "model_name = \"gpt2\"\n",
+    "model_name = \"t5-small\"\n",
     "\n",
     "# Set TOKENIZERS_PARALLELISM to false to avoid warnings\n",
     "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"\n",
@@ -64,8 +60,7 @@
     "    print(\"Using CUDA (NVIDIA GPU)\")\n",
     "    os.environ[\"CUDA_LAUNCH_BLOCKING\"] = \"1\"\n",
     "    # Leverage multi-gpu if available\n",
-    "    device1 = torch.device(\"cuda:0\")\n",
-    "    device2 = torch.device(\"cuda:1\") if torch.cuda.device_count() > 1 else torch.device(\"cuda:0\")\n",
+    "    device = torch.device(\"cuda\")\n",
     "    print(\"Using CUDA\")\n",
     "    # Clear GPU cache before starting\n",
     "    torch.cuda.empty_cache()\n",
@@ -74,12 +69,10 @@
     "    os.environ[\"PYTORCH_MPS_HIGH_WATERMARK_RATIO\"] = \"0.0\"\n",
     "    os.environ[\"PYTORCH_ENABLE_MPS_FALLBACK\"] = \"1\"\n",
     "    # Leverage multi-gpu if available\n",
-    "    device1 = torch.device(\"mps:0\")\n",
-    "    device2 = torch.device(\"mps:1\") \n",
+    "    device = torch.device(\"mps\")\n",
     "    print(\"Using MPS\")\n",
     "else:\n",
-    "    device1 = torch.device(\"cpu\")\n",
-    "    device2 = torch.device(\"cpu\")\n",
+    "    device = torch.device(\"cpu\")\n",
     "    print(\"Using CPU\")\n",
     "\n",
     "# Extract the .xz file\n",
@@ -136,29 +129,31 @@
    "outputs": [],
    "source": [
     "# Load the tokenizer from the pretrained model\n",
-    "tokenizer = GPT2Tokenizer.from_pretrained(model_name)\n",
-    "\n",
+    "tokenizer = T5Tokenizer.from_pretrained(model_name)\n",
+    "# Match Tokenizer to the model\n",
+    "tokenizer.add_tokens([f'<SPL_{i}' for i in range(0,28)])\n",
     "# Add the pad token if it doesn't exist\n",
     "if tokenizer.pad_token is None:\n",
     "    tokenizer.add_special_tokens({'pad_token': tokenizer.eos_token})\n",
     "else:\n",
     "    tokenizer.pad_token = tokenizer.eos_token\n",
+    "#print len of tokenizer\n",
+    "print(len(tokenizer))\n",
     "\n",
     "# Save the tokenizer\n",
     "tokenizer.save_pretrained(model_save_path)\n",
     "\n",
-    "model = GPT2LMHeadModel.from_pretrained(model_name)\n",
-    "model.resize_token_embeddings(len(tokenizer))\n",
+    "model = T5ForConditionalGeneration.from_pretrained(model_name)\n",
     "# Save the new model\n",
     "model.save_pretrained(model_save_path)\n",
     "\n",
-    "# Define preprocessing function\n",
+    "# Tokenize datasets\n",
     "def preprocess_function(examples):\n",
     "    inputs = examples['input_text']\n",
     "    targets = examples['target_text']\n",
-    "    model_inputs = tokenizer(inputs, max_length=512, truncation=True, padding='max_length')\n",
+    "    model_inputs = tokenizer(inputs, max_length=512, padding='max_length', truncation=True)\n",
     "    with tokenizer.as_target_tokenizer():\n",
-    "        labels = tokenizer(targets, max_length=512, truncation=True, padding='max_length')\n",
+    "        labels = tokenizer(targets, max_length=128, padding='max_length', truncation=True)\n",
     "    model_inputs['labels'] = labels['input_ids']\n",
     "    return model_inputs\n",
     "\n",
@@ -192,12 +187,7 @@
     ")\n",
     "\n",
     "model = get_peft_model(model, lora_config)\n",
-    "\n",
-    "# Manually split the model across the two GPUs\n",
-    "model.transformer.h[:6].to(device1)  # First half of layers to GPU 1\n",
-    "model.transformer.h[6:].to(device2)  # Second half of layers to GPU 2\n",
-    "model.transformer.ln_f.to(device2)  # Final normalization layer to GPU 2\n",
-    "model.lm_head.to(device2)  # Language modeling head to GPU 2"
+    "model.to(device)  # Language modeling head to GPU "
    ]
   },
   {
@@ -207,82 +197,37 @@
    "outputs": [],
    "source": [
     "# Set training arguments\n",
-    "training_args = TrainingArguments(\n",
+    "training_args = Seq2SeqTrainingArguments(\n",
     "    output_dir=\"./results\",  # Output directory\n",
     "    overwrite_output_dir=True,  # Overwrite the content of the output directory\n",
-    "    num_train_epochs=10,  # Number of training epochs\n",
-    "    per_device_train_batch_size=36,  # Batch size per device during training\n",
-    "    gradient_accumulation_steps=12,  # Accumulate gradients over multiple steps\n",
+    "    num_train_epochs=1,  # Number of training epochs\n",
+    "    per_device_train_batch_size=64,  # Batch size per device during training\n",
+    "    gradient_accumulation_steps=1,  # Accumulate gradients over multiple steps\n",
     "    learning_rate=5e-5,  # Learning rate\n",
     "    save_steps=2000,  # Save checkpoint every 2000 steps\n",
     "    save_total_limit=2,  # Limit the total amount of checkpoints\n",
-    "    evaluation_strategy=\"steps\",  # Evaluate during training at each `logging_steps`\n",
+    "    eval_strategy=\"steps\",  # Evaluate during training at each `logging_steps`\n",
     "    logging_steps=500,  # Log every 500 steps\n",
     "    eval_steps=2000,  # Evaluate every 2000 steps\n",
     "    load_best_model_at_end=True,  # Load the best model at the end of training\n",
     "    metric_for_best_model=\"loss\",  # Use loss to evaluate the best model\n",
+    "    predict_with_generate=True,  # Use generation for evaluation\n",
     "    fp16=False,  # Disable mixed precision training for MPS\n",
     ")\n",
     "\n",
-    "# Create the learning rate scheduler\n",
-    "total_steps = len(train_dataset) // training_args.per_device_train_batch_size * training_args.num_train_epochs\n",
-    "optimizer = torch.optim.AdamW(model.parameters(), lr=training_args.learning_rate)\n",
-    "lr_scheduler = get_linear_schedule_with_warmup(\n",
-    "    optimizer,\n",
-    "    num_warmup_steps=total_steps // 10,  # Warm-up for 10% of the total steps\n",
-    "    num_training_steps=total_steps\n",
-    ")\n",
-    "\n",
     "# Create Trainer instance\n",
-    "trainer = Trainer(\n",
+    "trainer = Seq2SeqTrainer(\n",
     "    model=model,\n",
     "    args=training_args,\n",
     "    train_dataset=train_dataset,\n",
     "    eval_dataset=eval_dataset,\n",
     "    tokenizer=tokenizer,\n",
-    "    optimizers=(optimizer, lr_scheduler)\n",
     ")\n",
     "\n",
-    "# Function to monitor system usage including GPU metrics\n",
-    "def print_system_usage(stop_event):\n",
-    "    while not stop_event.is_set():\n",
-    "        cpu_usage = psutil.cpu_percent()\n",
-    "        memory_usage = psutil.virtual_memory().percent\n",
-    "        if torch.cuda.is_available():\n",
-    "            gpu_alloc_mem = torch.cuda.memory_allocated() / (1024 ** 2)\n",
-    "            gpu_cached = torch.cuda.memory_reserved() / (1024 ** 2)\n",
-    "            sys.stdout.write(f\"\\rCPU Usage: {cpu_usage}% | Memory Usage: {memory_usage}% | GPU-Allocated-Memory Usage: {gpu_alloc_mem:.2f}MB | GPU-Cached-Memory Usage: {gpu_cached:.2f}MB\")\n",
-    "        elif torch.backends.mps.is_available():\n",
-    "            gpu_alloc_mem = torch.mps.current_allocated_memory() / (1024 ** 2)\n",
-    "            gpu_driver_mem = torch.mps.driver_allocated_memory() / (1024 ** 2)\n",
-    "            sys.stdout.write(f\"\\rCPU Usage: {cpu_usage}% | Memory Usage: {memory_usage}% | GPU-Allocated-Memory Usage: {gpu_alloc_mem:.2f}MB | GPU-Driver-Memory Usage: {gpu_driver_mem:.2f}MB\")\n",
-    "        sys.stdout.flush()\n",
-    "        time.sleep(300)  # Wait to remeasure system usage\n",
-    "\n",
-    "# Create an event to stop the thread\n",
-    "stop_event = threading.Event()\n",
-    "\n",
-    "# Start the system usage monitoring thread\n",
-    "monitoring_thread = threading.Thread(target=print_system_usage, args=(stop_event,))\n",
-    "monitoring_thread.start()\n",
-    "\n",
     "# Train the model\n",
-    "try:\n",
-    "    trainer.train()\n",
-    "except RuntimeError as e:\n",
-    "    if 'out of memory' in str(e):\n",
-    "        print(\"CUDA OutOfMemoryError: Out of memory during training. Try reducing the batch size or model size.\")\n",
-    "    else:\n",
-    "        raise\n",
-    "finally:\n",
-    "    # Stop the monitoring thread\n",
-    "    stop_event.set()\n",
-    "    monitoring_thread.join()\n",
-    "    if torch.cuda.device_count() > 1:\n",
-    "        model.module.save_pretrained(model_save_path)\n",
-    "    else:\n",
-    "        model.save_pretrained(model_save_path)\n",
-    "    tokenizer.save_pretrained(model_save_path)\n",
+    "trainer.train()\n",
+    "model.save_pretrained(model_save_path)\n",
+    "tokenizer.save_pretrained(model_save_path)\n",
     "\n",
     "print(\"Training complete and model saved.\")"
    ]
