--- a/serviceassurance/servass_latencyinsights.ipynb
+++ b/serviceassurance/servass_latencyinsights.ipynb
@@ -19,7 +19,8 @@
    "outputs": [],
    "source": [
     "# Install the required packages\n",
-    "%pip install -r requirements.txt"
+    "%pip install -r requirements.txt\n",
+    "%pip install torch torchvision torchaudio"
    ]
   },
   {
@@ -31,30 +32,15 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import tensorflow as tf\n",
-    "import tf2onnx\n",
-    "import onnx \n",
     "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "from torch.cuda.amp import autocast, GradScaler\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from tensorflow.keras.layers import Input, Dense, LayerNormalization, Dropout\n",
-    "from tensorflow.keras.models import Model\n",
-    "from tensorflow.keras.optimizers import Adam\n",
-    "from tensorflow.keras.callbacks import EarlyStopping\n",
-    "from tensorflow.keras.mixed_precision import Policy, set_global_policy\n",
     "\n",
-    "# Check if CUDA (NVIDIA GPU) is available\n",
-    "if tf.config.list_physical_devices('GPU'):\n",
-    "    device = \"/GPU:0\"\n",
-    "    print(\"Using CUDA (NVIDIA GPU)\")\n",
-    "else:\n",
-    "    device = \"/CPU:0\"\n",
-    "    print(\"Using CPU\")\n",
-    "\n",
-    "# Example of setting a tensor to the device\n",
-    "x = tf.random.uniform([3, 3])\n",
-    "with tf.device(device):\n",
-    "    x = tf.random.uniform([3, 3])\n",
-    "print(x.device)\n",
+    "# Check if MPS (Metal Performance Shaders) or CUDA is available\n",
+    "device = torch.device(\"mps\" if torch.backends.mps.is_available() else \"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "# Load the generated data\n",
     "data = pd.read_csv('data/servass_data.csv.xz', compression='xz', parse_dates=['timestamp'])\n",
@@ -121,7 +107,19 @@
     "# Split the data into training and validation sets\n",
     "train_size = int(0.8 * len(X))\n",
     "X_train, X_val = X[:train_size], X[train_size:]\n",
-    "y_train, y_val = y[:train_size], y[train_size:]"
+    "y_train, y_val = y[:train_size], y[train_size:]\n",
+    "\n",
+    "# Convert to PyTorch tensors\n",
+    "X_train = torch.tensor(X_train, dtype=torch.float32)\n",
+    "y_train = torch.tensor(y_train, dtype=torch.float32)\n",
+    "X_val = torch.tensor(X_val, dtype=torch.float32)\n",
+    "y_val = torch.tensor(y_val, dtype=torch.float32)\n",
+    "\n",
+    "train_dataset = TensorDataset(X_train, y_train)\n",
+    "val_dataset = TensorDataset(X_val, y_val)\n",
+    "\n",
+    "train_loader = DataLoader(train_dataset, batch_size=256, shuffle=True)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=256)\n"
    ]
   },
   {
@@ -130,69 +128,83 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define the Transformer model\n",
-    "class TransformerBlock(tf.keras.layers.Layer):\n",
-    "    def __init__(self, embed_dim, num_heads, ff_dim, rate=0.1):\n",
+    "# Transformer Block & Model Implementation\n",
+    "class TransformerBlock(nn.Module):\n",
+    "    def __init__(self, embed_dim, num_heads, ff_dim, dropout=0.1):\n",
     "        super(TransformerBlock, self).__init__()\n",
-    "        self.att = tf.keras.layers.MultiHeadAttention(num_heads=num_heads, key_dim=embed_dim)\n",
-    "        self.ffn = tf.keras.Sequential([\n",
-    "            tf.keras.layers.Dense(ff_dim, activation=\"relu\"),\n",
-    "            tf.keras.layers.Dense(embed_dim),\n",
-    "        ])\n",
-    "        self.layernorm1 = tf.keras.layers.LayerNormalization(epsilon=1e-6)\n",
-    "        self.layernorm2 = tf.keras.layers.LayerNormalization(epsilon=1e-6)\n",
-    "        self.dropout1 = tf.keras.layers.Dropout(rate)\n",
-    "        self.dropout2 = tf.keras.layers.Dropout(rate)\n",
+    "        self.attention = nn.MultiheadAttention(embed_dim, num_heads, dropout=dropout)\n",
+    "        self.ffn = nn.Sequential(\n",
+    "            nn.Linear(embed_dim, ff_dim),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(ff_dim, embed_dim)\n",
+    "        )\n",
+    "        self.layernorm1 = nn.LayerNorm(embed_dim)\n",
+    "        self.layernorm2 = nn.LayerNorm(embed_dim)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
     "\n",
-    "    def call(self, inputs, training=False):\n",
-    "        attn_output = self.att(inputs, inputs)\n",
-    "        attn_output = self.dropout1(attn_output, training=training)\n",
-    "        out1 = self.layernorm1(inputs + attn_output)\n",
-    "        ffn_output = self.ffn(out1)\n",
-    "        ffn_output = self.dropout2(ffn_output, training=training)\n",
-    "        return self.layernorm2(out1 + ffn_output)\n",
+    "    def forward(self, x):\n",
+    "        attn_output, _ = self.attention(x, x, x)\n",
+    "        x = self.layernorm1(x + self.dropout(attn_output))\n",
+    "        ffn_output = self.ffn(x)\n",
+    "        x = self.layernorm2(x + self.dropout(ffn_output))\n",
+    "        return x\n",
+    "    \n",
+    "class TransformerModel(nn.Module):\n",
+    "    def __init__(self, input_shape, embed_dim, num_heads, ff_dim, num_layers):\n",
+    "        super(TransformerModel, self).__init__()\n",
+    "        self.dense = nn.Linear(input_shape[-1], embed_dim)\n",
+    "        self.transformer_blocks = nn.ModuleList(\n",
+    "            [TransformerBlock(embed_dim, num_heads, ff_dim) for _ in range(num_layers)]\n",
+    "        )\n",
+    "        self.global_avg_pool = nn.AdaptiveAvgPool1d(1)\n",
+    "        self.fc1 = nn.Linear(embed_dim, 128)\n",
+    "        self.dropout = nn.Dropout(0.1)\n",
+    "        self.fc2 = nn.Linear(128, input_shape[-1])\n",
     "\n",
-    "def build_transformer_model(input_shape, embed_dim, num_heads, ff_dim, num_layers):\n",
-    "    inputs = Input(shape=input_shape)\n",
-    "    x = Dense(embed_dim)(inputs)\n",
-    "    for _ in range(num_layers):\n",
-    "        x = TransformerBlock(embed_dim, num_heads, ff_dim)(x)\n",
-    "    x = tf.keras.layers.GlobalAveragePooling1D()(x)\n",
-    "    x = Dense(128, activation=\"relu\")(x)\n",
-    "    x = Dropout(0.1)(x)\n",
-    "    outputs = Dense(input_shape[-1])(x)\n",
-    "\n",
-    "    model = Model(inputs, outputs)\n",
-    "    return model\n",
+    "    def forward(self, x):\n",
+    "        x = self.dense(x)\n",
+    "        x = x.permute(1, 0, 2)  # (batch_size, seq_length, embed_dim) -> (seq_length, batch_size, embed_dim)\n",
+    "        for transformer in self.transformer_blocks:\n",
+    "            x = transformer(x)\n",
+    "        x = x.permute(1, 2, 0)  # (seq_length, batch_size, embed_dim) -> (batch_size, embed_dim, seq_length)\n",
+    "        x = self.global_avg_pool(x)\n",
+    "        x = x.squeeze(-1)\n",
+    "        x = F.relu(self.fc1(x))\n",
+    "        x = self.dropout(x)\n",
+    "        x = self.fc2(x)\n",
+    "        return x\n",
     "\n",
     "input_shape = (seq_length - 1, X.shape[-1])\n",
-    "model = build_transformer_model(input_shape, embed_dim=64, num_heads=4, ff_dim=128, num_layers=2)\n",
+    "model = TransformerModel(input_shape, embed_dim=64, num_heads=4, ff_dim=128, num_layers=2).to(device)\n",
     "\n",
-    "model.compile(optimizer=Adam(learning_rate=0.0001), loss=\"mse\")\n",
-    "model.summary()\n",
+    "# Loss function and optimizer\n",
+    "criterion = nn.MSELoss()\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.0001)\n",
     "\n",
-    "# Set the mixed precision policy\n",
-    "policy = Policy('mixed_float16')\n",
-    "set_global_policy(policy)\n",
+    "# Set up mixed precision training\n",
+    "scaler = GradScaler()\n",
     "\n",
-    "early_stopping = tf.keras.callbacks.EarlyStopping(\n",
-    "    monitor='val_loss',\n",
-    "    patience=10,  # Increase patience\n",
-    "    restore_best_weights=True\n",
-    ")\n",
+    "# Implement early stopping\n",
+    "class EarlyStopping:\n",
+    "    def __init__(self, patience=10, verbose=False):\n",
+    "        self.patience = patience\n",
+    "        self.verbose = verbose\n",
+    "        self.counter = 0\n",
+    "        self.best_loss = None\n",
+    "        self.early_stop = False\n",
     "\n",
-    "# Train the model\n",
-    "history = model.fit(\n",
-    "    X_train, y_train,\n",
-    "    validation_data=(X_val, y_val),\n",
-    "    epochs=100,\n",
-    "    batch_size=128,\n",
-    "    callbacks=[early_stopping]\n",
-    ")\n",
-    "\n",
-    "# Evaluate the model\n",
-    "loss = model.evaluate(X_val, y_val)\n",
-    "print(f'Validation Loss: {loss}')"
+    "    def __call__(self, val_loss):\n",
+    "        if self.best_loss is None:\n",
+    "            self.best_loss = val_loss\n",
+    "        elif val_loss > self.best_loss:\n",
+    "            self.counter += 1\n",
+    "            if self.counter >= self.patience:\n",
+    "                if self.verbose:\n",
+    "                    print(\"Early stopping\")\n",
+    "                self.early_stop = True\n",
+    "        else:\n",
+    "            self.best_loss = val_loss\n",
+    "            self.counter = 0"
    ]
   },
   {
@@ -201,18 +213,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save the model in Keras format\n",
-    "model.save('data/service_assurance_transformer_model.keras')\n",
+    "# Training loop with early stopping\n",
+    "early_stopping = EarlyStopping(patience=10, verbose=True)\n",
+    "num_epochs = 10\n",
+    "train_losses = []\n",
+    "val_losses = []\n",
     "\n",
-    "# Define a sample input for the model to create an input signature\n",
-    "spec = (tf.TensorSpec((None, seq_length - 1, X.shape[-1]), tf.float32, name=\"input\"),)\n",
-    "\n",
-    "# Convert the Keras model to ONNX format\n",
-    "onnx_model, _ = tf2onnx.convert.from_keras(model, input_signature=spec, opset=13)\n",
-    "\n",
-    "# Save the ONNX model to a file\n",
-    "onnx_model_path = \"data/service_assurance_transformer_model.onnx\"\n",
-    "onnx.save(onnx_model, onnx_model_path)"
+    "for epoch in range(num_epochs):\n",
+    "    model.train()\n",
+    "    train_loss = 0.0\n",
+    "    for inputs, targets in train_loader:\n",
+    "        inputs, targets = inputs.to(device), targets.to(device)\n",
+    "        \n",
+    "        optimizer.zero_grad()\n",
+    "        with autocast():\n",
+    "            outputs = model(inputs)\n",
+    "            loss = criterion(outputs, targets)\n",
+    "        \n",
+    "        scaler.scale(loss).backward()\n",
+    "        scaler.step(optimizer)\n",
+    "        scaler.update()\n",
+    "        \n",
+    "        train_loss += loss.item() * inputs.size(0)\n",
+    "    \n",
+    "    train_loss = train_loss / len(train_loader.dataset)\n",
+    "    \n",
+    "    # Validation loop\n",
+    "    model.eval()\n",
+    "    val_loss = 0.0\n",
+    "    with torch.no_grad():\n",
+    "        for inputs, targets in val_loader:\n",
+    "            inputs, targets = inputs.to(device), targets.to(device)\n",
+    "            outputs = model(inputs)\n",
+    "            loss = criterion(outputs, targets)\n",
+    "            val_loss += loss.item() * inputs.size(0)\n",
+    "    \n",
+    "    val_loss = val_loss / len(val_loader.dataset)\n",
+    "    \n",
+    "    train_losses.append(train_loss)\n",
+    "    val_losses.append(val_loss)\n",
+    "    \n",
+    "    print(f'Epoch {epoch+1}/{num_epochs}, Train Loss: {train_loss:.4f}, Val Loss: {val_loss:.4f}')\n",
+    "    \n",
+    "    early_stopping(val_loss)\n",
+    "    if early_stopping.early_stop:\n",
+    "        break"
    ]
   },
   {
@@ -221,20 +266,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Make predictions\n",
-    "y_pred = model.predict(X_val)\n",
-    "\n",
+    "model.eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = []\n",
+    "with torch.no_grad():\n",
+    "    for inputs in val_loader:\n",
+    "        inputs = inputs[0].to(device)\n",
+    "        outputs = model(inputs)\n",
+    "        y_pred.append(outputs.cpu().numpy())\n",
+    "y_pred = np.concatenate(y_pred, axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Rescale the predictions and actual values back to the original scale\n",
     "y_pred_rescaled = scaler.inverse_transform(y_pred)\n",
-    "y_val_rescaled = scaler.inverse_transform(y_val)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "y_val_rescaled = scaler.inverse_transform(y_val)\n",
+    "\n",
     "# Calculate MAPE\n",
     "def mean_absolute_percentage_error(y_true, y_pred):\n",
     "    return np.mean(np.abs((y_true - y_pred) / y_true)) * 100\n",
@@ -249,10 +308,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot the predictions and actual values for a specific metric (e.g., latency)\n",
-    "plt.figure(figsize=(15, 5))\n",
-    "plt.plot(y_val_rescaled[:, 0], label='Actual Latency')\n",
-    "plt.plot(y_pred_rescaled[:, 0], label='Predicted Latency')\n",
+    "plt.figure(figsize=(20, 5))\n",
+    "plt.plot(range(len(y_val_rescaled)), y_val_rescaled, label='Actual Latency')\n",
+    "plt.plot(range(len(y_pred_rescaled)), y_pred_rescaled, label='Predicted Latency')\n",
     "plt.title('Actual vs Predicted Latency')\n",
     "plt.xlabel('Time Steps')\n",
     "plt.ylabel('Latency')\n",
