Model update for device selection

--- a/revenueassurance/02-telco-revass-transformer.ipynb
+++ b/revenueassurance/02-telco-revass-transformer.ipynb
@@ -92,6 +92,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "071d1f73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check if MPS (Metal Performance Shaders) or CUDA is available\n",
+    "if torch.backends.mps.is_available():\n",
+    "    device = torch.device(\"mps\")\n",
+    "elif torch.cuda.is_available():\n",
+    "    device = torch.device(\"cuda\")\n",
+    "else:\n",
+    "    device = torch.device(\"cpu\")\n",
+    "print(f\"Using device: {device}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d4d02c25",
    "metadata": {},
@@ -106,7 +123,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Define model architecture\n",
     "class SimpleTransformerModel(nn.Module):\n",
     "    def __init__(self, input_dim, d_model, nhead, output_dim):\n",
@@ -136,18 +152,25 @@
     "\n",
     "# Training loop\n",
     "num_epochs = 10\n",
-    "batch_size = 32\n",
+    "batch_size = 64\n",
     "train_dataloader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
     "\n",
+    "# Ensure your model is on the correct device\n",
+    "model.to(device)\n",
+    "\n",
+    "# Training loop\n",
     "for epoch in range(num_epochs):\n",
     "    model.train()\n",
     "    for X_batch, y_batch in train_dataloader:\n",
+    "        # Move data to the same device as the model\n",
+    "        X_batch = X_batch.to(device)\n",
+    "        y_batch = y_batch.to(device)\n",
     "        optimizer.zero_grad()\n",
     "        outputs = model(X_batch)\n",
     "        loss = criterion(outputs, y_batch.squeeze(1))  # Ensure target is of shape (batch_size)\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
-    "    print(f\"Epoch {epoch+1}/{num_epochs}, Loss: {loss.item()}\")\n"
+    "    print(f\"Epoch {epoch+1}/{num_epochs}, Loss: {loss.item()}\")"
    ]
   },
   {
@@ -221,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
