--- a/revenueassurance/02-telco-revass-transformer.ipynb
+++ b/revenueassurance/02-telco-revass-transformer.ipynb
@@ -195,6 +195,9 @@
     "correct = 0\n",
     "with torch.no_grad():\n",
     "    for X_batch, y_batch in test_dataloader:\n",
+    "        # Move data to the same device as the model\n",
+    "        X_batch = X_batch.to(device)\n",
+    "        y_batch = y_batch.to(device)\n",
     "        outputs = model(X_batch)\n",
     "        loss = criterion(outputs, y_batch.squeeze(1))\n",
     "        test_loss += loss.item()\n",
