Fixing the Target Key Error

--- a/5gnetops/5gran-predictions.ipynb
+++ b/5gnetops/5gran-predictions.ipynb
@@ -39,48 +39,37 @@
     "from peft import get_peft_model, LoraConfig, TaskType\n",
     "\n",
     "# Save the model and tokenizer\n",
-    "model_save_path = \"models/5g_oss_model\"\n",
+    "model_save_path = \"models/5gran_faultprediction_model\"\n",
     "model_name = \"t5-small\"\n",
     "\n",
     "# Set TOKENIZERS_PARALLELISM to false to avoid warnings\n",
     "os.environ[\"TOKENIZERS_PARALLELISM\"] = \"false\"\n",
-    "\n",
-    "# Clear GPU cache before starting\n",
-    "torch.cuda.empty_cache()\n",
     "gc.collect()\n",
-    "\n",
-    "# Cap memory usage to a specific size (e.g., 8 GB) for cuda\n",
-    "max_memory_gb = 8\n",
-    "max_memory_mb = max_memory_gb * 1024\n",
-    "os.environ['PYTORCH_CUDA_ALLOC_CONF'] = f'max_split_size_mb:{max_memory_mb}'\n",
     "\n",
     "# Check if any accelerator is available \n",
     "if torch.cuda.is_available():\n",
-    "    print(\"Using CUDA (NVIDIA GPU)\")\n",
     "    os.environ[\"CUDA_LAUNCH_BLOCKING\"] = \"1\"\n",
-    "    # Leverage multi-gpu if available\n",
     "    device = torch.device(\"cuda\")\n",
-    "    print(\"Using CUDA\")\n",
-    "    # Clear GPU cache before starting\n",
     "    torch.cuda.empty_cache()\n",
+    "    max_memory_mb = 8 * 1024\n",
+    "    os.environ['PYTORCH_CUDA_ALLOC_CONF'] = f'max_split_size_mb:{max_memory_mb}'\n",
     "# Check if MPS (Apple Silicon GPU) is available\n",
     "elif torch.backends.mps.is_available():\n",
     "    os.environ[\"PYTORCH_MPS_HIGH_WATERMARK_RATIO\"] = \"0.0\"\n",
     "    os.environ[\"PYTORCH_ENABLE_MPS_FALLBACK\"] = \"1\"\n",
-    "    # Leverage multi-gpu if available\n",
     "    device = torch.device(\"mps\")\n",
-    "    print(\"Using MPS\")\n",
     "else:\n",
     "    device = torch.device(\"cpu\")\n",
-    "    print(\"Using CPU\")\n",
+    "\n",
+    "print(device)\n",
     "\n",
     "# Extract the .xz file\n",
-    "with lzma.open('data/5G_netops_data_1M.csv.xz', 'rb') as f_in:\n",
-    "    with open('data/5G_netops_data_1M.csv', 'wb') as f_out:\n",
+    "with lzma.open('data/5G_netops_data_1000K.csv.xz', 'rb') as f_in:\n",
+    "    with open('data/5G_netops_data_1000K.csv', 'wb') as f_out:\n",
     "        shutil.copyfileobj(f_in, f_out)\n",
     "\n",
     "# Load the synthetic telecom data\n",
-    "data_path = \"data/5G_netops_data_1M.csv\"\n",
+    "data_path = \"data/5G_netops_data_1000K.csv\"\n",
     "data = pd.read_csv(data_path)\n",
     "\n",
     "# Display basic information about the full dataset\n",
@@ -103,8 +92,7 @@
     "\n",
     "# Prepare the input_text and target_text columns\n",
     "data['input_text'] = data.apply(lambda row: f\"Season: {row['Season']} Cell Availability: {row['Cell Availability (%)']} MTTR: {row['MTTR (hours)']} Throughput: {row['Throughput (Mbps)']} Latency: {row['Latency (ms)']} Packet Loss Rate: {row['Packet Loss Rate (%)']} Call Drop Rate: {row['Call Drop Rate (%)']} Handover Success Rate: {row['Handover Success Rate (%)']} Alarm Count: {row['Alarm Count']} Critical Alarm Count: {row['Critical Alarm Count']} Parameter Changes: {row['Parameter Changes']} Successful Configuration Changes: {row['Successful Configuration Changes (%)']} Data Usage: {row['Data Usage (GB)']} User Count: {row['User Count']} Signal Strength: {row['Signal Strength (dBm)']} Jitter: {row['Jitter (ms)']} Connection Setup Success Rate: {row['Connection Setup Success Rate (%)']} Security Incidents: {row['Security Incidents']} Authentication Failures: {row['Authentication Failures']} Temperature: {row['Temperature (°C)']} Humidity: {row['Humidity (%)']} Weather: {row['Weather']} Issue Reported: {row['Issue Reported']} City: {row['City']} State: {row['State']} Zip: {row['Zip']}\", axis=1)\n",
-    "data['target_text'] = data['Fault Occurrence Rate'].astype(str)\n",
-    "\n",
+    "data['target_text'] = data['Fault Occurrence Rate (%)'].astype(str)\n",
     "\n",
     "# Convert to HuggingFace Dataset\n",
     "dataset = Dataset.from_pandas(data)\n",
@@ -142,7 +130,6 @@
     "tokenizer.save_pretrained(model_save_path)\n",
     "model = T5ForConditionalGeneration.from_pretrained(model_name)\n",
     "\n",
-    "\n",
     "# Tokenize datasets\n",
     "def preprocess_function(examples):\n",
     "    inputs = examples['input_text']\n",
@@ -178,8 +165,7 @@
     "    target_modules=['q', 'v', 'k', 'o']\n",
     ")\n",
     "model = get_peft_model(model, lora_config)\n",
-    "model.to(device)  # Language modeling head to GPU \n",
-    "model.eval()"
+    "model.to(device)  # Language modeling head to GPU "
    ]
   },
   {
@@ -193,8 +179,8 @@
     "    output_dir=\"./results\",  # Output directory\n",
     "    overwrite_output_dir=True,  # Overwrite the content of the output directory\n",
     "    num_train_epochs=5,  # Number of training epochs\n",
-    "    per_device_train_batch_size=42,  # Batch size per device during training\n",
-    "    gradient_accumulation_steps=7,  # Accumulate gradients over multiple steps\n",
+    "    per_device_train_batch_size=64,  # Batch size per device during training\n",
+    "    gradient_accumulation_steps=16,  # Accumulate gradients over multiple steps\n",
     "    learning_rate=5e-5,  # Learning rate\n",
     "    save_steps=2000,  # Save checkpoint every 2000 steps\n",
     "    save_total_limit=2,  # Limit the total amount of checkpoints\n",
@@ -217,7 +203,10 @@
     ")\n",
     "\n",
     "# Train the model\n",
-    "trainer.train()"
+    "trainer.train()\n",
+    "\n",
+    "#model eval\n",
+    "model.eval()"
    ]
   },
   {
@@ -231,7 +220,6 @@
     "print(f\"Model Final Size = {model.get_input_embeddings().weight.shape[0]}\")\n",
     "model.save_pretrained(model_save_path)\n",
     "tokenizer.save_pretrained(model_save_path)\n",
-    "\n",
     "print(\"Training complete and model saved.\")"
    ]
   },
