--- a/revenueassurance/02-telco-revass-transformer.ipynb
+++ b/revenueassurance/02-telco-revass-transformer.ipynb
@@ -17,8 +17,7 @@
    "outputs": [],
    "source": [
     "## Install dependencies\n",
-    "!pip install -r requirements.txt\n",
-    "!pip install torch transformers"
+    "!pip install -r requirements.txt\n"
    ]
   },
   {
