--- a/sustainability/energy_cons_prediction.ipynb
+++ b/sustainability/energy_cons_prediction.ipynb
@@ -122,7 +122,7 @@
     "# Adding titles and labels\n",
     "ax.set_title('Energy Efficiency Rate vs Feature Values', fontsize=16)\n",
     "ax.set_xlabel('Feature Values', fontsize=14)\n",
-    "ax.set_ylabel('Energy Efficiency Rate (%)', fontsize=14)\n",
+    "ax.set_ylabel('Predicted Energy Efficiency Rate (%)', fontsize=14)\n",
     "\n",
     "plt.legend(title='Feature')\n",
     "plt.tight_layout()\n",
