--- a/sustainability/energy_cons_prediction.ipynb
+++ b/sustainability/energy_cons_prediction.ipynb
@@ -58,12 +58,10 @@
     "X_train_scaled = scaler.fit_transform(X_train)\n",
     "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
-    "## Step 4: Model Training\n",
     "# Training a Linear Regression model\n",
     "model = LinearRegression()\n",
     "model.fit(X_train_scaled, y_train)\n",
     "\n",
-    "## Step 5: Model Evaluation\n",
     "# Making predictions\n",
     "y_pred_train = model.predict(X_train_scaled)\n",
     "y_pred_test = model.predict(X_test_scaled)\n",
@@ -84,7 +82,7 @@
     "    'Importance': coefficients\n",
     "}).sort_values(by='Importance', ascending=False)\n",
     "\n",
-    "## Step 7: Save the Model and Scaler\n",
+    "## Save the Model and Scaler\n",
     "joblib.dump(model, 'models/energy_efficiency_model.pkl')\n",
     "joblib.dump(scaler, 'models/energy_effficiency_scaler.pkl')"
    ]
