Update on CUDA Environment

--- a/secops/secops-predictions.ipynb
+++ b/secops/secops-predictions.ipynb
@@ -33,15 +33,21 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "import torch\n",
+    "import os\n",
     "from torch.utils.data import DataLoader, Dataset\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "from transformers import BartTokenizer, BartForConditionalGeneration, get_linear_schedule_with_warmup, Seq2SeqTrainer, Seq2SeqTrainingArguments\n",
     "from peft import get_peft_model, LoraConfig, TaskType\n",
     "\n",
+    "fp16 = False\n",
     "# Check for device availability\n",
     "if torch.cuda.is_available():\n",
     "    device = torch.device(\"cuda\")\n",
+    "    fp16 = True\n",
+    "    os.environ[\"CUDA_LAUNCH_BLOCKING\"] = \"1\"\n",
+    "    max_memory_mb = 11.8 * 1024\n",
+    "    os.environ['PYTORCH_CUDA_ALLOC_CONF'] = f'max_split_size_mb:{max_memory_mb}'\n",
     "elif torch.backends.mps.is_available():\n",
     "    device = torch.device(\"mps\")\n",
     "else:\n",
@@ -111,14 +117,12 @@
     "    def __getitem__(self, idx):\n",
     "        input_text = str(self.inputs[idx])\n",
     "        target_text = str(self.targets[idx])\n",
-    "\n",
     "        input_encoding = self.tokenizer(\n",
     "            input_text, max_length=self.max_len, padding='max_length', truncation=True, return_tensors=\"pt\"\n",
     "        )\n",
     "        target_encoding = self.tokenizer(\n",
     "            target_text, max_length=self.max_len, padding='max_length', truncation=True, return_tensors=\"pt\"\n",
     "        )\n",
-    "\n",
     "        return {\n",
     "            'input_ids': input_encoding['input_ids'].flatten(),\n",
     "            'attention_mask': input_encoding['attention_mask'].flatten(),\n",
@@ -152,7 +156,7 @@
     "training_args = Seq2SeqTrainingArguments(\n",
     "    output_dir=\"./results\",  # Output directory\n",
     "    overwrite_output_dir=True,  # Overwrite the content of the output directory\n",
-    "    num_train_epochs=100,  # Number of training epochs\n",
+    "    num_train_epochs=3,  # Number of training epochs\n",
     "    per_device_train_batch_size=8,  # Batch size per device during training\n",
     "    gradient_accumulation_steps=8,  # Accumulate gradients over multiple steps\n",
     "    learning_rate=5e-5,  # Learning rate\n",
@@ -164,7 +168,7 @@
     "    load_best_model_at_end=True,  # Load the best model at the end of training\n",
     "    metric_for_best_model=\"loss\",  # Use loss to evaluate the best model\n",
     "    predict_with_generate=True,  # Use generation for evaluation\n",
-    "    fp16=False,  # Disable mixed precision training for MPS\n",
+    "    fp16=fp16,  # Disable mixed precision training for MPS\n",
     ")\n",
     "\n",
     "# Initialize Seq2SeqTrainer\n",
