--- a/secops/secops-predictions.ipynb
+++ b/secops/secops-predictions.ipynb
@@ -41,15 +41,17 @@
     "from peft import get_peft_model, LoraConfig, TaskType\n",
     "\n",
     "fp16 = False\n",
-    "# Check for device availability\n",
+    "# Check for accelerator availability\n",
     "if torch.cuda.is_available():\n",
     "    device = torch.device(\"cuda\")\n",
-    "    fp16 = True\n",
+    "    fp16 = True # only allow mix-precision training on Nvidia GPUs\n",
     "    os.environ[\"CUDA_LAUNCH_BLOCKING\"] = \"1\"\n",
-    "    max_memory_mb = 11.8 * 1024\n",
+    "    max_memory_mb = 11.8 * 1024 # Limit Memory to Avoid OOM Issues\n",
     "    os.environ['PYTORCH_CUDA_ALLOC_CONF'] = f'max_split_size_mb:{max_memory_mb}'\n",
     "elif torch.backends.mps.is_available():\n",
     "    device = torch.device(\"mps\")\n",
+    "    os.environ[\"PYTORCH_MPS_HIGH_WATERMARK_RATIO\"] = \"0.0\"\n",
+    "    os.environ[\"PYTORCH_ENABLE_MPS_FALLBACK\"] = \"1\"\n",
     "else:\n",
     "    device = torch.device(\"cpu\")\n",
     "print(f'Using device: {device}')\n",
@@ -158,7 +160,7 @@
     "    overwrite_output_dir=True,  # Overwrite the content of the output directory\n",
     "    num_train_epochs=3,  # Number of training epochs\n",
     "    per_device_train_batch_size=8,  # Batch size per device during training\n",
-    "    gradient_accumulation_steps=8,  # Accumulate gradients over multiple steps\n",
+    "    gradient_accumulation_steps=16,  # Accumulate gradients over multiple steps\n",
     "    learning_rate=5e-5,  # Learning rate\n",
     "    save_steps=2000,  # Save checkpoint every 2000 steps\n",
     "    save_total_limit=2,  # Limit the total amount of checkpoints\n",
