--- a/secops/secops-predictions.ipynb
+++ b/secops/secops-predictions.ipynb
@@ -7,7 +7,8 @@
     "# Telco Platform Engineering Security Operations <br> AI Insights Generation with Fine Tuning of Meta's BART Model\n",
     "Author: Fatih E. NAR <br>\n",
     "This project aims to deliver a security risk factor insights <br>\n",
-    "Model Card: https://huggingface.co/facebook/bart-large <br>"
+    "Model Card: https://huggingface.co/facebook/bart-large <br>",
+    "[Work In Progress]"
    ]
   },
   {
