Model Import Cleanup

--- a/secops/secops-predictions.ipynb
+++ b/secops/secops-predictions.ipynb
@@ -30,7 +30,7 @@
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from transformers import T5Tokenizer, T5ForConditionalGeneration, AutoTokenizer, AutoModelForSeq2SeqLM\n",
+    "from transformers import AutoTokenizer, AutoModelForSeq2SeqLM, Seq2SeqTrainer, Seq2SeqTrainingArguments\n",
     "import torch\n",
     "import os\n",
     "from torch.utils.data import DataLoader, Dataset\n",
@@ -59,7 +59,7 @@
     "# why did we use parquet format? Cos we love to complicate stuff. Just kidding. \n",
     "# Parquet is a columnar storage format that is optimized for reading and writing data. \n",
     "# And it is a good choice for storing large datasets.\n",
-    "data = pd.read_parquet('data/5G_SecOps_Data_1K.parquet')\n",
+    "data = pd.read_parquet('data/5G_SecOps_Data_100K.parquet')\n",
     "\n",
     "# Preprocess the data\n",
     "def preprocess_data(data):\n",
@@ -141,18 +141,15 @@
     "#model = T5ForConditionalGeneration.from_pretrained('t5-small').to(device)\n",
     "model = AutoModelForSeq2SeqLM.from_pretrained(\"google-t5/t5-base\")\n",
     "\n",
-    "# Define training arguments and trainer\n",
-    "from transformers import Seq2SeqTrainer, Seq2SeqTrainingArguments\n",
-    "\n",
     "# If you GPU sucks you can reduce the epock count to 1 , \n",
     "# at that level which your loss rate shoud be around 0.05 already\n",
     "# if not you can increase the epoch count to higher.\n",
     "# if your GPU memory is also limited and endding with OOM error, you can reduce the batch size to 2 or 1\n",
     "training_args = Seq2SeqTrainingArguments(\n",
     "    output_dir=\"./results\",\n",
-    "    num_train_epochs=3,\n",
-    "    per_device_train_batch_size=4,\n",
-    "    per_device_eval_batch_size=4,\n",
+    "    num_train_epochs=10,\n",
+    "    per_device_train_batch_size=16,\n",
+    "    per_device_eval_batch_size=64,\n",
     "    learning_rate=3e-5,\n",
     "    weight_decay=0.01,\n",
     "    logging_dir='./logs',\n",
