Training Arg Update

--- a/secops/secops-predictions.ipynb
+++ b/secops/secops-predictions.ipynb
@@ -37,16 +37,19 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import matplotlib.pyplot as plt\n",
+    "from peft import get_peft_model, LoraConfig, TaskType\n",
     "\n",
     "# Check if any accelerator is available \n",
     "# If you are reading this and about to buy a GPU, please buy an NVIDIA GPU as all AI frameworks are optimized for NVIDIA GPUs,\n",
     "# and you will have a better experience with NVIDIA GPUs.\n",
+    "fp16 = False\n",
     "if torch.cuda.is_available():\n",
     "    os.environ[\"CUDA_LAUNCH_BLOCKING\"] = \"1\"\n",
     "    device = torch.device(\"cuda\")\n",
     "    torch.cuda.empty_cache()\n",
     "    max_memory_mb = 8 * 1024\n",
     "    os.environ['PYTORCH_CUDA_ALLOC_CONF'] = f'max_split_size_mb:{max_memory_mb}'\n",
+    "    fp16 = True\n",
     "# Check if MPS (Apple Silicon GPU) is available\n",
     "elif torch.backends.mps.is_available():\n",
     "    os.environ[\"PYTORCH_MPS_HIGH_WATERMARK_RATIO\"] = \"0.0\"\n",
@@ -141,22 +144,39 @@
     "#model = T5ForConditionalGeneration.from_pretrained('t5-small').to(device)\n",
     "model = AutoModelForSeq2SeqLM.from_pretrained(\"google-t5/t5-base\")\n",
     "\n",
+    "# Define PEFT/LoRA configuration\n",
+    "lora_config = LoraConfig(\n",
+    "    task_type=TaskType.SEQ_2_SEQ_LM,\n",
+    "    inference_mode=False,\n",
+    "    r=4, # it was 2\n",
+    "    lora_alpha=32, # it was 16\n",
+    "    lora_dropout=0.1, # it was 0.05\n",
+    "    target_modules=['q', 'v', 'k', 'o']\n",
+    ")\n",
+    "model = get_peft_model(model, lora_config)\n",
+    "model.to(device)  # Language modeling head to GPU \n",
+    "\n",
     "# If you GPU sucks you can reduce the epock count to 1 , \n",
     "# at that level which your loss rate shoud be around 0.05 already\n",
     "# if not you can increase the epoch count to higher.\n",
     "# if your GPU memory is also limited and endding with OOM error, you can reduce the batch size to 2 or 1\n",
     "training_args = Seq2SeqTrainingArguments(\n",
     "    output_dir=\"./results\",\n",
-    "    num_train_epochs=10,\n",
-    "    per_device_train_batch_size=16,\n",
-    "    per_device_eval_batch_size=64,\n",
+    "    num_train_epochs=3,\n",
+    "    per_device_train_batch_size=8,\n",
+    "    gradient_accumulation_steps=64,  # Accumulate gradients over multiple steps\n",
+    "    per_device_eval_batch_size=24,\n",
     "    learning_rate=3e-5,\n",
-    "    weight_decay=0.01,\n",
     "    logging_dir='./logs',\n",
-    "    logging_steps=10,\n",
-    "    evaluation_strategy=\"epoch\",\n",
-    "    save_total_limit=1,\n",
+    "    evaluation_strategy=\"steps\",\n",
+    "    save_total_limit=10,\n",
+    "    eval_strategy=\"steps\",  # Evaluate during training at each `logging_steps`\n",
+    "    logging_steps=500,  # Log every 500 steps\n",
+    "    eval_steps=500,  # Evaluate every 2000 steps\n",
+    "    load_best_model_at_end=True,  # Load the best model at the end of training\n",
+    "    metric_for_best_model=\"loss\",  # Use loss to evaluate the best model\n",
     "    predict_with_generate=True,\n",
+    "    fp16=fp16, # Mixed precision training only for CUDA\n",
     ")\n",
     "\n",
     "trainer = Seq2SeqTrainer(\n",
