--- a/secops/secops-predictions.ipynb
+++ b/secops/secops-predictions.ipynb
@@ -62,7 +62,7 @@
     "# why did we use parquet format? Cos we love to complicate stuff. Just kidding. \n",
     "# Parquet is a columnar storage format that is optimized for reading and writing data. \n",
     "# And it is a good choice for storing large datasets.\n",
-    "data = pd.read_parquet('data/5G_SecOps_Data_100K.parquet')\n",
+    "data = pd.read_parquet('data/5G_SecOps_Data_10K.parquet')\n",
     "\n",
     "# Preprocess the data\n",
     "def preprocess_data(data):\n",
@@ -163,9 +163,9 @@
     "training_args = Seq2SeqTrainingArguments(\n",
     "    output_dir=\"./results\",\n",
     "    num_train_epochs=3,\n",
-    "    per_device_train_batch_size=8,\n",
+    "    per_device_train_batch_size=16,\n",
     "    gradient_accumulation_steps=64,  # Accumulate gradients over multiple steps\n",
-    "    per_device_eval_batch_size=24,\n",
+    "    per_device_eval_batch_size=16,\n",
     "    learning_rate=3e-5,\n",
     "    logging_dir='./logs',\n",
     "    evaluation_strategy=\"steps\",\n",
